# MyWorkTable

./: .gitignore  Cargo.toml  README.md  claude-hooks.json  claude-settings.json  install.sh
assets/: CREDITS  manifest.json  tailwind.css
migrations/: 001_initial.sql  002_waiting_tool.sql  003_observer_features.sql
skills/: todo.md
src/: db.rs  main.rs  models.rs  server.rs  sound.rs  state.rs  time.rs
templates/: index.html  todo_edit_note.html  todo_edit_text.html
