[package]
name = "my-work-table"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
pulldown-cmark = "0.12"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["json"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
dirs = "6"
async-stream = "0.3"
futures = "0.3"
askama = "0.13"
askama_axum = "0.4"
rodio = "0.20"
